# harmonic_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  harmonic_cpp-config.cmake.in
include/harmonic_cpp/: accessors.hpp  morsel_info.hpp  robot_position.hpp  timed_video.hpp  utils.hpp
src/: accessors.cpp  morsel_info.cpp  robot_position.cpp  timed_video.cpp  utils.cpp
src/test/: accessor_iterator_test.cpp  dataset_test.cpp  morsel_test.cpp  robot_position_test.cpp  timed_video_test.cpp
